--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,7 +15,7 @@ jobs:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.METRICS_TOKEN }}
-          user: Sakura-LZQ
+          user: Sakura125809
           config_timezone: Asia/China
           config_order: base.header, isocalendar, base.repositories, followup, pagespeed, people
           config_padding: 10%
@@ -41,7 +41,7 @@ jobs:
           filename: metrics.additional.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.METRICS_TOKEN }}
-          user: Sakura-LZQ
+          user: Sakura125809
           config_timezone: Asia/China
           config_order: habits, stargazers, languages, stargazers, topics
           config_padding: 10%
