--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,9 +1,8 @@
 name: GitHub metrics
 on:
   schedule:
-    - cron: "0 * * * *"
-  push:
-    branches: "master"
+    # Runs at 0 UTC+8
+    - cron: "0 16 * * *"
   workflow_dispatch:
 jobs:
   github-metrics-personal:
