--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.METRICS_TOKEN }}
-          user: Sakura125809
+          # user: Sakura125809
           config_timezone: Asia/China
           config_order: base.header, isocalendar, base.repositories, followup, pagespeed, people
           config_padding: 10%
@@ -40,7 +40,7 @@ jobs:
           filename: metrics.additional.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.METRICS_TOKEN }}
-          user: Sakura125809
+          # user: Sakura125809
           config_timezone: Asia/China
           config_order: habits, stargazers, languages, stargazers, topics
           config_padding: 10%
