--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,8 @@ jobs:
         with:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.METRICS_TOKEN }}
+          output_action: gist
+          committer_gist: ${{ secret.GIST }}
           # user: Sakura125809
           config_timezone: Asia/China
           config_order: base.header, isocalendar, base.repositories, followup, pagespeed, people
@@ -39,7 +40,8 @@ jobs:
         with:
           filename: metrics.additional.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.METRICS_TOKEN }}
+          output_action: gist
+          committer_gist: ${{ secrets.GIST }}
           # user: Sakura125809
           config_timezone: Asia/China
           config_order: habits, stargazers, languages, stargazers, topics
