--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           output_action: gist
-          committer_gist: ${{ secret.GIST }}
+          committer_gist: ${{ secrets.GIST }}
           # user: Sakura125809
           config_timezone: Asia/China
           config_order: base.header, isocalendar, base.repositories, followup, pagespeed, people
